Fix styling on smaller screens
min-width would force the element to be larger than the available
space in the table, pushing it outside of the view port.

--- a/app/javascript/components/key-performance-indicators/table-percentage-bar/styles.css
+++ b/app/javascript/components/key-performance-indicators/table-percentage-bar/styles.css
@@ -3,7 +3,6 @@
   width: 100%;
   height: 0.75rem;
   text-align: right;
-  min-width: 14rem;
 }
 
 .TablePercentageBarComplete {
